apps/solar/k8s.namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: solar
  labels:
    goldilocks.fairwinds.com/enabled: "true"
